Fixed z-index on section-title.

--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ body {
     flex: 3;
     text-decoration: none;
     flex-direction: row;
-    transition: 0.4s ease-in-out;
+    transition: 0.4s margin;
 }
 
 .project-card:not(:last-child) {
@@ -283,7 +283,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: left;
-    transition: 0.4s ease-in-out;
+    transition: 0.4s;
 }
 
 .project-card-text-view {
@@ -299,17 +299,21 @@ body {
 .project-card img {
     width: 170px;
     margin: auto;
-    -webkit-transition: 0.4s ease;
+    -webkit-transition: 0.4s ease-in-out;
     transition: 0.4s ease-in-out;
 }
 
 .project-card:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
 }
 
 .project-card:hover img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+}
+
+.project-card:hover .project-card-right {
+    transform: translateX(5%);
 }
 
 .tags-container {
